--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,6 @@
 /* Smooth scroll */
 * {
 	border: 0;
-	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 	font-family: 'Poppins', sans-serif !important;
@@ -27,16 +26,17 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	background: black;
+	background: linear-gradient(45deg, blue, red);;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-	background: gray;
+	background: ;
 	transition: 1s;
 }
-
 body {
+	padding: 0;
+	margin: 0;
 	padding-top: 110px;
 }
 
@@ -82,17 +82,4 @@ body {
 	100% {
 		opacity: 1;
 	}
-}
-
-
-
-#login{
-	--size:calc(48vh / 2);
-	padding-top: 12px;
-	margin-top: var(--size);
-	margin-bottom: var(--size);
-
-}
-#login div{
-	margin-bottom: 24px;
 }
