--- a/assets/css/theme-switch.css
+++ b/assets/css/theme-switch.css
@@ -149,5 +149,9 @@ input {
 	width: 1px;
 	height: 1px;
 }
+body:has(.switch__input:checked) {
+    background-color: var(--fg);
+    color: var(--bg);
+}
 
 /* Navbardaki Theme Switch Button'u Bitişi */
