--- a/assets/css/search-engine.css
+++ b/assets/css/search-engine.css
@@ -4,7 +4,7 @@
 	width: 100%;
 	max-width: 60px;
 	height: 55px;
-	margin: 0 50px;
+	margin: 0 5rem;
 	background-color: #fff;
 	border-radius: 6px;
 	transition: all 0.5s ease-in-out;
